--- a/package.json
+++ b/package.json
@@ -45,5 +45,13 @@
     "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.33",
     "@types/passport-local-mongoose": "^4.0.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sgohari/COMP308-ASSIGNMENT2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/sgohari/COMP308-ASSIGNMENT2/issues"
+  },
+  "homepage": "https://github.com/sgohari/COMP308-ASSIGNMENT2#readme"
 }
